=== 4.24.0 (2015-07-01)

* Allow class_table_inheritance plugin to support subclasses that don't add additional columns (QuinnHarris, jeremyevans) (#1030)

* Add :columns option to update_refresh plugin, specifying the columns to include in the RETURNING clause (celsworth) (#1029)

* Use column symbol key for auto validation unique errors if the unique index is on a single column (jeremyevans)

* Allow :timeout option to Database#listen in the postgres adapter to be a callable object (celsworth) (#1028)

* Add pg_inet_ops extension, for DSL support for PostgreSQL inet/cidr operators and functions (celsworth, jeremyevans) (#1024)

* Support :*_opts options in auto_validations plugin, for setting options for the underlying validation methods (celsworth, jeremyevans) (#1026)

* Support :delay_pks association option in association_pks to delay setting of associated_pks until after saving (jeremyevans)

* Make jdbc subadapters work if they issue queries while the subadapter is being loaded (jeremyevans) (#1022)

* Handle 64-bit auto incrementing primary keys in jdbc subadapters (DougEverly) (#1018, #1019)

* Remove the deprecated db2 and dbi adapters (jeremyevans)

* Make auto_validation plugin use :from=>:values option to setup validations on the underlying columns (jeremyevans)

* Add :from=>:values option to validation_helpers methods, for getting values from the values hash instead of a method call (jeremyevans)

=== 4.23.0 (2015-06-01)

* Make dataset.call_sproc(:insert) work in the jdbc adapter (flash-gordon) (#1013)

* Add update_refresh plugin, for refreshing a model instance when updating (jeremyevans)

* Add delay_add_association plugin, for delaying add_* method calls on new objects until after saving the object (jeremyevans)

* Add validate_associated plugin, for validating associated objects when validating the current object (jeremyevans)

* Make Postgres::JSONBOp#[] and #get_text return JSONBOp instances (jeremyevans) (#1005)
